--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -1,22 +1,16 @@
 ---
-title: "Authentication"
-description: "Example overview page before API endpoints"
+title: "Authentification"
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et eros iaculis tortor dapibus cursus. Curabitur quis sapien nec tortor dictum gravida.
+L'API de ALAL utilise OAuth 2.0 Bearer Token pour authentifier les demandes. Tous les appels à l'API doivent inclure un jeton porteur (Bearer Token).
 
-```bash
-'Authorization': 'Token <team_token>'
+```curl
+GET /cards HTTP/1.1
+Host: api.sandbox.alal.africa
+Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cC...
 ```
 
-## API Tokens
-
-Nullam convallis mauris at nunc consectetur, ac imperdiet leo rutrum. Maecenas cursus purus a pellentesque blandit. Pellentesque vitae lacinia libero, non mollis metus.
-
-Nam id ullamcorper urna, at rutrum enim. [Maecenas vulputate](/introduction) vehicula libero, vitae sodales augue pretium nec. Quisque a magna tempor, semper risus vel, fermentum nunc. Pellentesque fermentum interdum ex, eu convallis massa blandit sed. Aliquam bibendum ipsum vel laoreet auctor.
-
-### Permissions
-
-Etiam lobortis ut odio ut fermentum. Nunc odio velit, sollicitudin at consectetur id, tristique eget turpis. Aliquam at risus vitae dolor sodales venenatis. In hac habitasse platea dictumst.
-
-Aenean consequat diam eget mollis fermentum. [Quisque eu malesuada](/introduction) felis, non dignissim libero.
+<Warning>
+  Un jeton non valide, manquant ou expiré entraînera des réponses `HTTP 401
+  Unauthorized`.
+</Warning>
