--- a/webhooks/overview.mdx
+++ b/webhooks/overview.mdx
@@ -1,13 +1,4 @@
----
-sidebar_position: 1
----
-
-# Webhooks
-
-When events happen on our systems you'll be notified on your ipn urls. You have to configure 2 urls
-
-- `Ipn sandbox` : for production
-- `Sandbox Ipn URL` : for sandbox and test purpose
+Lorsque des événements se produisent sur nos systèmes, vous serez notifiés sur vos urls ipn.
 
 ## Card Users Events
 
