--- a/environnement.mdx
+++ b/environnement.mdx
@@ -2,6 +2,6 @@ L'API ALAL et le tableau de bord sont disponibles dans deux environnements :
 
 | **Environment** |               **Sandbox**               |                 **Production**                  |
 | :-------------: | :-------------------------------------: | :---------------------------------------------: |
-|  Dashboard URL  |       https://www.app.saalal.com        |       https://www.sandbox.app.saalal.com        |
-|     API URL     |       https://www.api.saalal.com        |         https://sandbox.api.sudo.africa         |
+|  Dashboard URL  |         https://www.saalal.com          |         https://www.sandbox.saalal.com          |
+|     API URL     |       https://www.api.saalal.com        |         https://api.sandbox.sudo.africa         |
 |     ALAL.js     | https://www.saalal.com/js/1.0.1/alal.js | https://www.sandbox.saalal.com/js/1.0.1/alal.js |
