--- a/environnement.mdx
+++ b/environnement.mdx
@@ -3,5 +3,5 @@ L'API ALAL et le tableau de bord sont disponibles dans deux environnements :
 | **Environment** |               **Sandbox**               |                 **Production**                  |
 | :-------------: | :-------------------------------------: | :---------------------------------------------: |
 |  Dashboard URL  |         https://www.saalal.com          |         https://www.sandbox.saalal.com          |
-|     API URL     |       https://www.api.saalal.com        |         https://api.sandbox.sudo.africa         |
+|     API URL     |       https://www.api.saalal.com        |         https://api.sandbox.saalal.com          |
 |     ALAL.js     | https://www.saalal.com/js/1.0.1/alal.js | https://www.sandbox.saalal.com/js/1.0.1/alal.js |
