--- a/errors.mdx
+++ b/errors.mdx
@@ -14,4 +14,4 @@ ALAL utilise les codes de réponse HTTP conventionnels pour indiquer le succès 
 |          404 - Not Found           |                                                La ressource demandée n'existe pas.                                                |
 |           409 - Conflict           |                                         La demande est en conflit avec une autre demande.                                         |
 |      429 - Too Many Requests       |        Trop de demandes arrivent trop rapidement sur l'API. Nous recommandons une réduction exponentielle de vos demandes.        |
-| 500, 502, 503, 504 - Server Errors | Quelque chose a mal tourné du côté de Sudo. Ces problèmes sont rares et s'ils surviennent, veuillez nous contacter immédiatement. |
+| 500, 502, 503, 504 - Server Errors | Quelque chose a mal tourné du côté de ALAL. Ces problèmes sont rares et s'ils surviennent, veuillez nous contacter immédiatement. |
