--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,6 +5,6 @@ description: "Bienvenue sur la documentation de ALAL"
 
 Notre documentation vous guidera tout au long de votre intégration, depuis les bases (authentification, structure des demandes) jusqu'à l'utilisation et la création de produits financiers (comptes, cartes, paiements, etc.).
 
-Prêt à commencer ? [Inscrivez-vous ici](https://sandbox.saalal.com/) pour recevoir un accès immédiat à notre Sandbox et commencer à construire avec Sudo.
+Prêt à commencer ? [Inscrivez-vous ici](https://sandbox.saalal.com/) pour recevoir un accès immédiat à notre Sandbox et commencer à construire avec ALAL.
 
 Nous sommes ravis que vous soyez ici ! Nous vous promettons que vous serez opérationnel en un clin d'œil ! 🤞🏽
