--- a/postman-collection.mdx
+++ b/postman-collection.mdx
@@ -1,6 +1,6 @@
-Vous pouvez interagir immédiatement avec l'API Sudo via Postman.
+Vous pouvez interagir immédiatement avec l'API ALAL via Postman.
 
 Pour commencer, cliquez sur le bouton Run in Postman ci-dessous pour importer notre collection Postman.
 [![Run in Postman](https://run.pstmn.io/button.svg)](https://app.getpostman.com/run-collection/20313494-01557c8a-33cc-4911-9122-672ebb857ff1?action=collection%2Ffork&source=rip_markdown&collection-url=entityId%3D20313494-01557c8a-33cc-4911-9122-672ebb857ff1%26entityType%3Dcollection%26workspaceId%3Dced59401-2f09-429a-a2d8-60073331b84d)
 
-La collection Sudo Postman utilise [les variables d'environnement Postman](https://learning.getpostman.com/docs/postman/environments_and_globals/intro_to_environments_and_globals/) pour simplifier chaque demande d'API. Pour plus d'informations sur la gestion des environnements Postman, voir [Configuration d'un environnement avec des variables](https://learning.postman.com/docs/sending-requests/managing-environments/). Vous devrez définir les variables d'environnement suivantes.
+La collection ALAL Postman utilise [les variables d'environnement Postman](https://learning.getpostman.com/docs/postman/environments_and_globals/intro_to_environments_and_globals/) pour simplifier chaque demande d'API. Pour plus d'informations sur la gestion des environnements Postman, voir [Configuration d'un environnement avec des variables](https://learning.postman.com/docs/sending-requests/managing-environments/). Vous devrez définir les variables d'environnement suivantes.
