--- a/integrations/integration.mdx
+++ b/integrations/integration.mdx
@@ -5,7 +5,7 @@ description: "Ces différents plugins permettent d'intégrer facilement les APIs
 
 <CardGroup cols={2}>
   <Card
-    title="ala-node"
+    title="alal-node"
     icon="js"
     iconType="duotone"
     color="#9563FF"
@@ -14,7 +14,7 @@ description: "Ces différents plugins permettent d'intégrer facilement les APIs
     Node JS package for ALAL
   </Card>
   <Card
-    title="ala-php"
+    title="alal-php"
     icon="php"
     iconType="duotone"
     color="#9563FF"
