--- a/integrations/integration.mdx
+++ b/integrations/integration.mdx
@@ -23,7 +23,7 @@ description: "Ces différents plugins permettent d'intégrer facilement les APIs
     PHP package for ALAL
   </Card>
   <Card
-    title="alal-php (coming soon)"
+    title="alal-python (coming soon)"
     icon="python"
     iconType="duotone"
     color="#9563FF"
