--- a/integrations/integration.mdx
+++ b/integrations/integration.mdx
@@ -23,10 +23,11 @@ description: "Ces différents plugins permettent d'intégrer facilement les APIs
     PHP package for ALAL
   </Card>
   <Card
-    title="alal-python (coming soon)"
+    title="alal-python"
     icon="python"
     iconType="duotone"
     color="#9563FF"
+    href="https://github.com/ALAL-Community/alal-python"
   >
     Python package for ALAL
   </Card>
