Add KYC to the documentation

--- a/environnement.mdx
+++ b/environnement.mdx
@@ -1,7 +1,8 @@
 L'API ALAL et le tableau de bord sont disponibles dans deux environnements :
 
-| **Environment** |             **Production**              |                   **Sandbox**                   |
-|:---------------:|:---------------------------------------:|:-----------------------------------------------:|
-|  Dashboard URL  |         https://www.saalal.com          |         https://www.sandbox.saalal.com          |
-|     API URL     |        https://api.saalal.com/v1        |        https://api.sandbox.saalal.com/v1        |
-|     ALAL.js     | https://www.saalal.com/js/1.0.1/alal.js | https://www.sandbox.saalal.com/js/1.0.1/alal.js |
+| **Environment** |               **Production**                |                     **Sandbox**                     |
+| :-------------: | :-----------------------------------------: | :-------------------------------------------------: |
+|  Dashboard URL  |           https://www.saalal.com            |           https://www.sandbox.saalal.com            |
+|     API URL     |          https://api.saalal.com/v1          |          https://api.sandbox.saalal.com/v1          |
+|     ALAL.js     |   https://www.saalal.com/js/1.0.1/alal.js   |   https://www.sandbox.saalal.com/js/1.0.1/alal.js   |
+|   ALAL-KYC.js   | https://www.saalal.com/js/1.0.1/alal-kyc.js | https://www.sandbox.saalal.com/js/1.0.1/alal-kyc.js |
