--- a/kyc/usage.mdx
+++ b/kyc/usage.mdx
@@ -63,10 +63,7 @@ alalKyc.mount({
 <html lang="en">
   <head>
     <title>My Accounting Opening Flow</title>
-    <script
-      crossorigin
-      src="https://4004-41-214-3-213.ngrok-free.app/js/1.0.1/alal-kyc.js"
-    ></script>
+    <script src="https://www.sandbox.saalal.com/js/1.0.1/alal-kyc.js"></script>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
@@ -74,8 +71,6 @@ alalKyc.mount({
   </head>
 
   <body>
-    <div id="kyc-host"></div>
-
     <script>
       <!-- Inititation de ALAL-KYC.js -->
       alalKyc.mount({
